--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -8,13 +8,13 @@
  * -------------------------------------------------------------------------- */
 
  :root {
-  --vp-c-brand: #646cff;
-  --vp-c-brand-light: #747bff;
-  --vp-c-brand-lighter: #9499ff;
-  --vp-c-brand-lightest: #bcc0ff;
-  --vp-c-brand-dark: #535bf2;
-  --vp-c-brand-darker: #454ce1;
-  --vp-c-brand-dimm: rgba(100, 108, 255, 0.08);
+  --vp-c-brand: #42B883;
+  --vp-c-brand-light: #9CCDB7;
+  --vp-c-brand-lighter: #D0ECE4;
+  --vp-c-brand-lightest: #EAF7F3;
+  --vp-c-brand-dark: #36856D;
+  --vp-c-brand-darker: #1E6350;
+  --vp-c-brand-dimm: rgba(66, 184, 131, 0.08);
 }
 
 /**
@@ -41,14 +41,14 @@
   --vp-home-hero-name-color: transparent;
   --vp-home-hero-name-background: -webkit-linear-gradient(
     120deg,
-    #bd34fe 30%,
-    #41d1ff
+    #42B883 30%,
+    #9CCDB7
   );
 
   --vp-home-hero-image-background-image: linear-gradient(
     -45deg,
-    #bd34fe 50%,
-    #47caff 50%
+    #42B88345 50%,
+    #9CCd8745 50%
   );
   --vp-home-hero-image-filter: blur(40px);
 }
